ebrains/nest-desktop/service-apache2-oidc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2-oidc
  namespace: nest-desktop
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: apache2-oidc
  sessionAffinity: None
  type: ClusterIP
