ebrains/nest-desktop/service-nest-desktop.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-desktop
  namespace: nest-desktop
spec:
  ports:
    - port: 54286
      protocol: TCP
      targetPort: 54286
  selector:
    io.kompose.service: nest-desktop
  sessionAffinity: None
  type: ClusterIP
